--- a/dyyp-desktop-pro/src/App.css
+++ b/dyyp-desktop-pro/src/App.css
@@ -4,11 +4,12 @@
   margin: 0 auto;
   text-align: center;
 
+  --gold: #f8e390;
   --green: #5DAB50;
   --black: #1A1A1A;
   --gray-D: #343434;
   --gray-M: #494949;
-  --gray-L: #838383;
+  --gray-L: #979696;
 }
 
 /* ============== HEADER SECTION ================ */
@@ -48,6 +49,10 @@
   line-height: 0.8;
   margin-left: 12px;
 }
+.subtitle span {
+  color: var(--gold);
+  font-style: italic;
+}
 
 .searchbar {
   border: none;
@@ -70,13 +75,101 @@
 /* ============== COIN DETAILS SECTION ================ */
 
 .details-container {
-  margin-top: 200px;
+  margin-top: 125px;
+}
+
+.details-top {
+  display: flex;
+  align-items: center;
+}
+
+.details-header {
+  min-height: 300px;
+  margin-top: 20px;
+  text-align: left;
+  padding: 22px;
+  background-color: var(--gray-D);
+  border-radius: 0px 24px 24px 0px;
+}
+
+.details-name {
+  font-size: 54px;
+  margin: 0;
+}
+.details-description {
+  font-size: 20px;
+  color: var(--gray-L);
+  margin: 12px 0;
+}
+.details-algorithm {
+  font-size: 12px;
+  color: var(--gray-L);
+}
+.details-image {
+  border-radius: 12px;
+  margin: 24px;
+}
+
+.chart-container {
+  display: flex;
+}
+
+.chart-title {
+  background-color: var(--green);
+  display: flex;
+  padding: 12px 0;
+}
+
+.chart-container h2 {
+  writing-mode: vertical-lr;
+  font-size: 32px;
+}
+
+.chart-wrapper {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* ------- TABLE ------- */
+
+.table-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.details-table {
+  border-collapse: collapse;
+  margin: 20px 0;
+}
+
+table {
+  border: 24px solid var(--gray-D);
+  width: 100%;
+}
+th {
+  padding: 12px 12px;
+  text-align: left;
+}
+td {
+  padding: 6px 12px;
+  text-align: right;
+}
+tr:nth-child(even) {
+  background-color: var(--black);
+}
+tr:nth-child(odd) {
+  background-color: var(--gray-D);
 }
 
 /* ============== MAIN SECTION ================ */
 
 hr {
-  width: 90%;
+  width: 95%;
   border-color: var(--gray-D);
 }
 
